@@ -12,4 +12,6 @@ ok($exception->causes_fail, "Exception events always cause failure");
 
 is($exception->summary, "Exception: evil at lake_of_fire.t line 6", "Got summary");
 
+ok($exception->diagnostics, "Exception events are counted as diagnostics");
+
 done_testing;
