@@ -2,6 +2,7 @@
 
     - Formatters can pick buffered subtest behavior
     - Add sets_plan() method to event base class
+    - Add diagnostics() method to event base class
 
 0.000038  2016-04-03 15:41:39-07:00 America/Los_Angeles
 
